--- a/CSS_advanced/styles/10-style.css
+++ b/CSS_advanced/styles/10-style.css
@@ -46,7 +46,7 @@ a {
     color: var(--color-primary);
 }
 
-.section-header-align {
+.section-header {
     text-align: var(--section-header-align);
 }
 
