--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -41,7 +41,14 @@ a {
     text-decoration: none;
 }
 
+a:link {
+    color: var(--text-color);
+    text-decoration: none;
+}
+
 a:visited {
+    color: var(--text-color);
+    text-decoration: none;
     font-style: italic;
 }
 
