--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -169,7 +169,7 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--nav-item-link-hover);
 }
 
-.ul.row {
+ul.row {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -193,6 +193,6 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--text-color);
 }
 
-.ul.footer {
+ul.footer {
     text-align: right;
 }
