--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -1,3 +1,4 @@
+
 :root {
     --color-primary: #d73953;
     --color-black: #090909;
@@ -5,28 +6,37 @@
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
+
     --font-weight-regular: 400;
     --font-weight-bold: 700;
+
     --line-height-small: 1.2;
     --line-height-base: 1.5;
     --line-height-big: 1.8;
+
     --section-header-align: center;
+
     --section-tagline-transform: uppercase;
+
     --section-title-margin: 0;
     --section-title-color: var(--color-black);
+
     --section-padding: 5rem 0;
     --section-header-padding: 0 0 3rem;
     --section-body-padding: 0 0 3rem;
     --section-footer-padding: 3rem 0 0;
     --section-footer-align: center;
     --footer-padding: 5rem 0 1rem;
+
     --nav-item-font-family: var(--font-family-title);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
@@ -34,7 +44,9 @@
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
+
     --section-tagline-margin: 0;
+
 }
 
 *,
@@ -50,15 +62,15 @@ html {
 
 body {
     color: var(--text-color);
-    font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
+    font-family: var(--font-family-base);
     font-weight: var(--font-weight-regular);
     line-height: var(--line-height-base);
 }
 
-a {
-    color: var(--text-color);
-    text-decoration: none;
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
 }
 
 a:link {
@@ -67,8 +79,6 @@ a:link {
 }
 
 a:visited {
-    color: var(--text-color);
-    text-decoration: none;
     font-style: italic;
 }
 
@@ -80,61 +90,10 @@ a:active {
     background-color: var(--color-light-grey);
 }
 
-.visually-hidden {
-    display: none;
-}
-
-.card-category {
-    color: var(--color-primary);
-}
-
-.section {
-    padding: var(--section-padding);
-}
-
-.section-header {
-    text-align: var(--section-header-align);
-    padding: var(--section-header-padding);
-}
-
-.section-title {
-    font-family: var(--font-family-title);
-    font-size: var(--font-size-xx-large);
-    font-weight: var(--font-weight-bold);
-    margin: var(--section-title-margin);
-    color: var(--section-title-color);
-}
-
-.section-tagline {
-    color: var(--color-primary);
-    font-family: var(--font-family-title);
-    text-transform: var(--section-tagline-transform);
-    font-weight: var(--font-weight-bold);
-    margin: var(--section-tagline-margin);
-}
-
-.section-body {
-    padding: var(--section-body-padding);
-}
-
-.section-footer {
-    padding: var(--section-footer-padding);
-    text-align: var(--section-footer-align);
-}
-
 .container {
     width: 960px;
     margin-left: auto;
     margin-right: auto;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: var(--font-family-title);
-    font-weight: var(--font-weight-bold);
-}
-
-.footer {
-    padding: var(--footer-padding);
 }
 
 .navbar-menu {
@@ -144,8 +103,8 @@ h1, h2, h3, h4, h5, h6 {
 .nav {
     margin: 0;
     padding: 0;
-    list-style: none;
     text-align: center;
+    list-style: none;
 }
 
 .nav .nav-item {
@@ -166,18 +125,77 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--nav-item-link-hover);
 }
 
+.section {
+    padding: var(--section-padding);
+}
+
+.section-header {
+    text-align: var(--section-header-align);
+    padding: var(--section-header-padding);
+}
+
+.section-body {
+    padding: var(--section-body-padding);
+}
+
+.section-footer {
+    text-align: var(--section-footer-align);
+    padding: var(--section-footer-padding);
+}
+
+.section-title {
+    font-family: var(--font-family-title);
+    font-size: var(--font-size-xx-large);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-title-margin);
+    color: var(--section-title-color);
+}
+
+.section-tagline {
+    color: var(--color-primary);
+    font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-tagline-margin);
+}
+
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 ul.row {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.col-1-3{
+[class^="col-"] {
+    float: left;
+    padding: 0.5rem;
+}
+
+.col-1-3 {
     width: 33.33%;
 }
 
-.col-1-2{
+.col-1-2 {
     width: 50%;
+}
+
+
+.card-category {
+    color: var(--color-primary);
+    font-size: var(--font-size-medium);
+}
+
+.footer {
+    padding: var(--footer-padding);
+}
+
+.footer ul {
+    text-align: right;
 }
 
 .footer-copyright {
@@ -185,32 +203,8 @@ ul.row {
     font-size: var(--font-size-small);
     color: var(--text-color);
 }
-
-.footer-adress {
-    color: var(--text-color);
-}
-
-.social-link {
-    display: block;
-}
-
-.social-link > svg {
-    fill: var(--text-color);
-}
-
-.footer ul {
-    text-align: right;
-}
-
-.row::after {
-      content: "";
-      display: table;
-      clear: both;
-}
-
-[class^="col-"] {
-      float: left;
-      padding: 0.5rem
+.visually-hidden {
+    display: none;
 }
 
 [data-section-theme="dark"] {
