--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -103,6 +103,14 @@ a:active {
     color: var(--button-hover-color);
     text-decoration: var(--button-hover-text-decoration);
     background-color: var(--button-hover-background);
+    transition-property: background-color, color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--transition-cubic-bezier);
+}
+
+.button:hover {
+    transition: background-color var(--transition-duration) var(--transition-cubic-bezier),
+                color var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .visually-hidden {
@@ -364,9 +372,3 @@ ul.row{
 .card-work:hover .card-outer {
     transform: scale(0.95);
 }
-
-.button:hover {
-    transition: background-color var(--transition-duration) var(--transition-cubic-bezier),
-                color var(--transition-duration) var(--transition-cubic-bezier);
-}
-
